# edinet-replay

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  NOTICE  README.ja.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
docs/: architecture.md  canonicalization-v1.md  content-hash-v1.md  for-investors.md  for-researchers.md  japanese-market-data.md  reproducibility.md  schema.md
edinet_replay/: __init__.py  catalog.py  cli.py  client.py  extract.py  hashing.py  models.py  package.py  selectors.py  taxonomy.py
schemas/: extraction-manifest-1.0.0.schema.json  faithful-filing-1.0.0.schema.json
src/edinet_replay/: __init__.py  canonical.py  catalog.py  cli.py  client.py  exceptions.py  extract.py  hashing.py  models.py  package.py  schemas.py  selectors.py  taxonomy.py
taxonomies/: README.md  edinet-fsa-2023-12-01.json  edinet-fsa-2024-11-01.json
tests/: test_canonical.py  test_cli_fetch.py  test_client.py  test_client_live.py  test_golden_e00492.py  test_golden_e04236.py  test_hashing.py  test_offline_resolution.py  test_package.py  test_package_and_cli.py  test_schema_validation.py  test_semantic_validation.py  test_taxonomy_and_selection.py  test_xbrl_projection.py
tests/fixtures/edinet_api/: bad_request.json  documents_success.json  not_found.json
tests/fixtures/minimal/: extraction-manifest.json  faithful-filing.json
tests/golden/: E00492-S100VH9B.json  E04236-S100W1NC.json
tools/: arelle_probe.py
